# PanGBank-api

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: CI.yaml  python-publish.yml
alembic/: env.py
alembic/versions/: fd73e89e68ea_add_fluidity_columns_to_pangenome_table.py
api_pangbank/: app.py  database.py  models.py  run_api.py  taxonomy.py
app/: crud.py  database.py  dependencies.py  main.py  models.py
app/crud/: collections.py  common.py  genomes.py  pangenomes.py
app/manage_db/: collections.py  genome_metadata.py  genomes.py  pangbank_db.py  taxonomy.py  utils.py
app/routers/: collections.py  genomes.py  pangenomes.py
app/scripts/: add_collection.py  add_collection_release_to_db.py  add_genome_metadata.py  collection.py  collections.py  delete_collection.py  export_schema_as_static_html.py  genome_metadata.py  genomes.py  pangbank_db.py  taxonomy.py  test.py  utils.py
pangbank_api/: config.py  database.py  dependencies.py  main.py  models.py
pangbank_api/crud/: collections.py  common.py  genomes.py  pangenomes.py
pangbank_api/manage_db/: collections.py  genome_metadata.py  genomes.py  input_models.py  pangbank_db.py  taxonomy.py  utils.py
pangbank_api/routers/: collections.py  genomes.py  pangenomes.py
scripts/: add_collection_release_to_db.py  taxonomy.py
tests/: mock_data.py  mock_session.py  test_collections.py
tests/cruds/: test_pangenomes.py
tests/manage_db/: test_collection.py  test_genome_in_pangenome.py  test_genome_metadata.py  test_genomes.py  test_pangbank_db.py  test_taxonomy.py  test_utils.py
tests/routers/: test_collections.py  test_genomes.py  test_pangenomes.py
