[tool.poetry]
name = "pangbank-api"
version = "0.1.0"
description = "Source code to PanGBank API"
authors = ["JeanMainguy <jean.mainguy@outlook.fr>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
sqlmodel = "^0.0.22"
typer = "^0.15.1"
pyyaml = "^6.0.2"


[tool.poetry.scripts]
pangbank_db = "app.manage_db.pangbank_db:cli"
rick-portal-gun = "rick_portal_gun.main:app"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
requests = "^2.32.3"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
